--- a/css/style.css
+++ b/css/style.css
@@ -21,56 +21,13 @@ letter-spacing: 0.025em;
 a:hover.ba-logo{
 	color: #303030;
 }
-.ba-Black-White{
-	text-align: right;
-	padding-top: 120px;
-}
-.ba-Black-White div{
-	width: 50%;
-	margin-right: 105px;
-}
-.ba-Black-White .ba-title{
-	font: 900 150px/1 'Raleway', Arial, sans-serif;
-	margin-top: 0;
-	margin-bottom: 30px;
-}
-.ba-Black-White p{
-	margin-bottom: 15px;
-}
-.ba-Black-White a{
-	font-size: 24px;
-	font-weight: 700;
-}
-.ba-groups{
-	text-align: center;
-	margin-top: 100px;
-}
-.ba-round{
-	height: 11px;
-	width: 11px;
-	border-radius: 50%;
-	background-color: #303030;
-	display: inline-block;
-	margin: 0 2px;
-}
-a:hover .ba-round, a:first-of-type .ba-round{
-	background-color: #e10011;
-}
-/* Link */
-a{
-	color: #303030;
-	text-decoration: none;
-}
-a:hover{
-	color: #e10011;
-}
 /* Menu */
 .ba-menu{
 	float: left;
 	list-style: none;
 	font-size: 18px;
 	font-weight: 400;
-	padding-top: 15px;
+	padding-top: 10px;
 }
 .ba-menu li{
 	float: left;
@@ -81,7 +38,133 @@ a:hover{
 }
 .ba-menu li:last-of-type a{
 	margin-right: 0;
+	margin-top: 1px;
 }
+/* --- */
+
+.ba-Black-White{
+	text-align: right;
+	padding-top: 80px;
+}
+.ba-Black-White .ba-col-1{
+	width: 51.6%;
+	margin-right: 8.7%;
+/* 	margin-right: 105px; */
+}
+.ba-Black-White .ba-col-2{
+	width: 30.5%;
+}
+
+.ba-Black-White .ba-title{
+	font: 900 150px/1 'Raleway', Arial, sans-serif;
+	margin-top: 0;
+	margin-bottom: 20px;
+}
+.ba-Black-White p{
+	margin-bottom: 15px;
+}
+.ba-Black-White a{
+	font-size: 24px;
+	font-weight: 700;
+}
+/* Link */
+a{
+	color: #303030;
+	text-decoration: none;
+}
+a:hover{
+	color: #e10011;
+}
+/* ---- */
+.ba-groups{
+	text-align: center;
+	margin-top: 50px;
+}
+.ba-groups a{
+	height: 11px;
+	width: 11px;
+	border-radius: 50%;
+	background-color: #303030;
+	display: inline-block;
+	margin: 0 2px;
+}
+.ba-groups a:hover{
+	background-color: #e10011;
+}
+.ba-Featured-Product{
+	background-color: #FFF;
+	text-align: center;
+	font: 400 18px/1.3 'Raleway', Arial, sans-serif;
+	padding: 60px 71px 70px;
+	margin-top: 95px;
+	border-radius: 5px;
+}
+.ba-Featured-Product .ba-title{
+	font-size: 48px;
+	font-weight: 900;
+	margin-bottom: 5px;
+}
+.ba-Featured-Product p{
+	max-width: 570px;
+	margin: 5px auto 70px;
+}
+ .ba-grid-1 .ba-col-1{
+	width: 65.5%;
+}
+.ba-grid-1 .ba-col-2, .ba-grid-2 .ba-col{
+	width: 31%;
+}
+.ba-grid-2 .ba-float-left{
+	margin-right: 3.5%;
+}
+.ba-grid-2{
+	margin-top: 30px;
+}
+a.ba-work{
+	display: inline-block;
+	position: relative;
+	color: #FFF;
+	text-decoration: none;
+	text-align: left;
+	border-radius: 5px;
+	overflow: hidden;
+	font: 900 30px/1.3 'Roboto', Arial, sans-serif;
+
+}
+.ba-work img{
+	display: block;
+	max-width: 100%;
+}
+.ba-work__overlay{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #e10011;
+	opacity: 0;
+	transition: opasiti .3s ease-in;
+}
+.ba-work h3{
+	position: absolute;
+	bottom: 20%;
+	left: 0;
+	max-width: 285px;
+	margin: 0;
+	margin-left: 35px;
+}
+.ba-work h3:after{
+	content: "";
+	height: 5px;
+	background: #FFF;
+	width: 112px;
+	display: block;
+	margin-top: 10px;
+}
+.ba-work:hover .ba-work__overlay{
+	opacity: 1;
+}
+
 
 /* Typography */
 a,
