--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ letter-spacing: 0.025em;
 /* Layout */
 .ba-container{
 	max-width: 1238px;
-	padding: 35px 20px 100px;
+	padding: 35px 20px 20px;
 }
 
 .ba-logo{
@@ -31,6 +31,7 @@ a:hover.ba-logo{
 }
 .ba-menu li{
 	float: left;
+	transition: transform .3s ease-in;
 }
 .ba-menu a{
 	display: block;
@@ -40,34 +41,66 @@ a:hover.ba-logo{
 	margin-right: 0;
 	margin-top: 1px;
 }
+.ba-menu-close{
+	transform: translateY(-300px);
+}
 /* --- */
 
-.ba-Black-White{
+.ba-slider__slide{
+	outline: none;
+}
+.ba-black-white{
 	text-align: right;
 	padding-top: 80px;
 }
-.ba-Black-White .ba-col-1{
+.ba-black-white .ba-col-1{
 	width: 51.6%;
 	margin-right: 8.7%;
 /* 	margin-right: 105px; */
 }
-.ba-Black-White .ba-col-2{
+.ba-black-white .ba-col-2{
 	width: 30.5%;
 }
 
-.ba-Black-White .ba-title{
+.ba-black-white .ba-title{
 	font: 900 150px/1 'Raleway', Arial, sans-serif;
 	margin-top: 0;
 	margin-bottom: 20px;
 }
-.ba-Black-White p{
+.ba-black-white p{
 	margin-bottom: 15px;
 }
-.ba-Black-White a{
+.ba-black-white a{
 	font-size: 24px;
 	font-weight: 700;
 }
+.slick-dots{
+	padding: 0;
+	margin: 0;
+	list-style: none;
+	margin-top: 60px;
+	text-align: center;
+}
+.slick-dots li{
+	height: 11px;
+	width: 11px;
+	border-radius: 50%;
+	background-color: #303030;
+	display: inline-block;
+	margin: 0 5px;
+}
+.slick-dots li:hover{
+	opacity: 0.7;
+}
+.slick-dots li.slick-active{
+	background-color: #e10011;
+}
+.slick-dots button{
+	display: none;
+}
+
 /* Link */
+
 a{
 	color: #303030;
 	text-decoration: none;
@@ -75,23 +108,10 @@ a{
 a:hover{
 	color: #e10011;
 }
+
 /* ---- */
-.ba-groups{
-	text-align: center;
-	margin-top: 50px;
-}
-.ba-groups a{
-	height: 11px;
-	width: 11px;
-	border-radius: 50%;
-	background-color: #303030;
-	display: inline-block;
-	margin: 0 2px;
-}
-.ba-groups a:hover{
-	background-color: #e10011;
-}
-.ba-Featured-Product{
+
+.ba-featured-product{
 	background-color: #FFF;
 	text-align: center;
 	font: 400 18px/1.3 'Raleway', Arial, sans-serif;
@@ -99,15 +119,18 @@ a:hover{
 	margin-top: 95px;
 	border-radius: 5px;
 }
-.ba-Featured-Product .ba-title{
+h2.ba-title{
 	font-size: 48px;
 	font-weight: 900;
 	margin-bottom: 5px;
 }
-.ba-Featured-Product p{
+.ba-subtitle{
 	max-width: 570px;
-	margin: 5px auto 70px;
+	margin: 7px auto 35px;
 }
+ .ba-grid-1{
+ 	margin-top: 70px;
+ }
  .ba-grid-1 .ba-col-1{
 	width: 65.5%;
 }
@@ -128,8 +151,6 @@ a.ba-work{
 	text-align: left;
 	border-radius: 5px;
 	overflow: hidden;
-	font: 900 30px/1.3 'Roboto', Arial, sans-serif;
-
 }
 .ba-work img{
 	display: block;
@@ -141,9 +162,10 @@ a.ba-work{
 	left: 0;
 	right: 0;
 	bottom: 0;
+	border-radius: 5px;
 	background: #e10011;
 	opacity: 0;
-	transition: opasiti .3s ease-in;
+	transition: opacity .3s ease-in;
 }
 .ba-work h3{
 	position: absolute;
@@ -152,12 +174,13 @@ a.ba-work{
 	max-width: 285px;
 	margin: 0;
 	margin-left: 35px;
+	font: 900 30px/1.3 'Roboto', Arial, sans-serif;
 }
 .ba-work h3:after{
 	content: "";
 	height: 5px;
 	background: #FFF;
-	width: 112px;
+	width: 96px;
 	display: block;
 	margin-top: 10px;
 }
@@ -212,4 +235,82 @@ select:focus {
 }
 textarea {
 
+}
+
+.ba-footer{
+	font: 400 18px/1.34 'Raleway', Arial, sans-serif;
+	text-align: center;
+}
+.ba-form{
+	display: block;
+	max-width: 702px;
+	margin: 0 auto;
+	height: 70px;
+	line-height: 70px;
+	background-color: #FFF;
+	border-radius: 35px;
+	position: relative;
+	overflow: hidden;
+	outline: none;
+	border: none;
+	margin-bottom: 112px;
+}
+.fa-envelope-o{
+	position: absolute;
+	left: 32px;
+	top: 25px;
+	color: #979797;
+}
+input, button{
+	outline: none;
+	border: none;
+	display: block;
+	height: 100%;
+}
+input{
+	float: left;
+	width: 70%;
+	padding-left: 70px;
+	font-style: italic;
+}
+button{
+	float: right;
+	width: 30%;
+	background: #303030;
+	color: #FFF;
+	text-transform: uppercase;
+	font-family: 'Roboto', Arial, sans-serif;
+	font-weight: 900;
+}
+button:hover{
+	background: #e10011;
+}
+::-webkit-input-placeholder{
+	color: #979797;
+}
+.ba-socials a{
+	width: 70px;
+	height: 70px;
+	border-radius: 50%;
+	background-color: #FFF;
+	outline: none;
+	text-align: center;
+	display: inline-block;
+	font-size: 34px;
+	padding: 15px 0;
+	margin: 0 10px;
+	color:  #979797;
+}
+.ba-socials a:hover{
+	color: #e10011;
+}
+.ba-copyright{
+	margin-top: 60px;
+	color: #979797;
+}
+.ba-copyright a{
+	color: #303030;
+}
+.ba-copyright a:hover{
+	color: #e10011;
 }
